--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,14 @@ php:
   - 5.5
   - 5.4
   - 5.3
+  
+services:
+  - mysql
+  
+before_script:
+  - mysql -u root -e 'CREATE DATABASE BOOKXCHANGE;'
+  - mysql -u root BOOKXCHANGE < database/book.sql
+  
+after_failure:
+  # Prints *.actual files content
+  - for i in $(find ./tests -name \*.actual); do echo "--- $i"; cat $i; echo; echo; done
