--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,24 @@
 language: php
 php:
   - 5.6
-  - 5.5
-  - 5.4
-  - 5.3
-  
-services:
-  - mysql
+  - hhvm
+
+matrix:
+  allow_failures:
+    - php: hhvm
   
 before_script:
+  - composer self-update
+  - composer install --no-interaction --prefer-source --dev
   - mysql -u root -e 'CREATE DATABASE BOOKXCHANGE;'
   - mysql -u root BOOKXCHANGE < database/book.sql
   
+script:
+  - ./vendor/bin/phpunit
+
 after_failure:
   # Prints *.actual files content
   - for i in $(find ./tests -name \*.actual); do echo "--- $i"; cat $i; echo; echo; done
+
+notifications:
+  email: false
