--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,11 @@ before_script:
   - composer install --no-interaction --prefer-source --dev
   - mysql -e 'CREATE DATABASE IF NOT EXISTS BOOKXCHANGE;'
   - mysql BOOKXCHANGE < database/book.sql
+  - npm install karma
   
 script:
   - ./vendor/bin/phpunit
+  - karma start --single-run --browsers PhantomJS karma.conf.js
 
 after_failure:
   # Prints *.actual files content
