--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,7 @@ before_script:
   - composer install --no-interaction --prefer-source --dev
   - mysql -e 'CREATE DATABASE IF NOT EXISTS BOOKXCHANGE;'
   - mysql BOOKXCHANGE < database/book.sql
-  - npm install karma-phantomjs-launcher -save-dev
-  - npm install karma
+  - npm install karma phantomjs-prebuilt jasmine-core karma-phantomjs-launcher karma-jasmine --save-dev
   
 script:
   - ./vendor/bin/phpunit
