--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,17 @@ php:
 matrix:
   allow_failures:
     - php: hhvm
+
+before_install:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
   
 before_script:
   - composer self-update
   - composer install --no-interaction --prefer-source --dev
   - mysql -e 'CREATE DATABASE IF NOT EXISTS BOOKXCHANGE;'
   - mysql BOOKXCHANGE < database/book.sql
-  - npm install karma phantomjs-prebuilt jasmine-core karma-phantomjs-launcher karma-jasmine --save-dev
+  - npm install karma phantomjs-prebuilt jasmine-core karma-phantomjs-launcher karma-jasmine karma-chrome-launcher --save-dev
   
 script:
   - ./vendor/bin/phpunit
