--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ matrix:
     - php: hhvm
 
 before_install:
+  - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   
@@ -20,7 +21,7 @@ before_script:
   
 script:
   - ./vendor/bin/phpunit
-  - karma start --single-run --browsers PhantomJS karma.conf.js
+  - node_modules/karma/bin/karma start karma.conf.js --single-run
 
 after_failure:
   # Prints *.actual files content
