--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_script:
   - composer self-update
   - composer install --no-interaction --prefer-source --dev
   - mysql -e 'CREATE DATABASE IF NOT EXISTS BOOKXCHANGE;'
-  - mysql BOOKXCHANGE < database/book.sql
+  - mysql BOOKXCHANGE < database/booktest.sql
   - "mysql -u root -e \"GRANT ALL PRIVILEGES ON *.* TO ''@'localhost';\""
   - npm install karma phantomjs-prebuilt jasmine-core karma-phantomjs-launcher karma-jasmine karma-chrome-launcher --save-dev
   
